# scratchai

./: .env.example  .gitignore  AGENTS.md  CODE_OF_CONDUCT.en.md  CODE_OF_CONDUCT.zh-CN.md  CONTRIBUTING.en.md  CONTRIBUTING.zh-CN.md  README.en.md  README.md  README.zh-CN.md  SECURITY.en.md  SECURITY.zh-CN.md  SUPPORT.en.md  SUPPORT.zh-CN.md  TASK_QUEUE.md  package-lock.json  package.json  tsconfig.base.json
.github/: PULL_REQUEST_TEMPLATE.md
Windows-Test/: README.zh-CN.md  SOP.zh-CN.md  cat-and-mouse-flow-sample.test.mjs  deepseek-teaching-workflow.test.mjs  generate-teaching-brief-from-sb3.mjs  run-deepseek-teaching-workflow.mjs  run-scratch-regression.ps1  sb3-teaching-draft.mjs  sb3-teaching-draft.test.mjs  test-deepseek-planned-generation.mjs  test-deepseek-script-level.mjs  verify-deepseek-live-seq.mjs  verify-desktop-companion-project-url-ui.mjs  verify-desktop-companion-real-e2e.mjs  verify-desktop-companion-ui.mjs  verify-scratch-bridge.mjs  verify-scratch-local.mjs
apps/server-api/: README.md  pyproject.toml
apps/server-api/app/: dependencies.py  main.py  schemas.py
apps/server-api/app/core/: config.py  db.py  schema.py  security.py
apps/server-api/app/routes/: ai.py  auth.py  health.py  progress.py  releases.py
apps/server-api/app/services/: ai.py  auth.py  dashboard.py  progress.py  releases.py
apps/server-api/tests/: conftest.py  test_health.py  test_release_progress_dashboard.py  test_teacher_auth.py
docs/: README.zh-CN.md  architecture.zh-CN.md  maintenance.zh-CN.md  project-structure.en.md  project-structure.zh-CN.md  releasing.en.md  (+4 more)
(+195 files in other folders)
