
[project]
name = "scratch-ai-server-api"
version = "0.1.0"
description = "FastAPI server for Scratch AI Coach"
requires-python = ">=3.14"
dependencies = [
  "fastapi>=0.115,<1.0",
  "uvicorn>=0.30,<1.0",
  "pytest>=8.0,<9.0",
  "httpx>=0.27,<1.0"
]

[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"
